--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,5 @@
-torch==0.4.1.post2
-torchvision==0.2.1
-opencv-python==3.4.2.17
-scikit-image==0.14.2
-scipy==1.1.0
+torch>=0.4.1
+torchvision>=0.2.1
+opencv-python==3.4.8.29
+scipy>=1.3.2
+gdown>=3.10.1
