--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -46,16 +46,20 @@ jobs:
         restore-keys: ${{ matrix.os }}-${{ matrix.python-version }}-
     - name: Update pip
       run: python -m pip install --upgrade pip
+    - name: Install numpy and matplotlib for Python 3.6
+      if: matrix.python-version == 3.6
+      run: >
+        pip install "numpy<1.20" "matplotlib<4"
     - name: Install PyTorch on Linux and Windows
       if: >
         matrix.operating-system == 'ubuntu-latest' ||
         matrix.operating-system == 'windows-latest'
       run: >
-        pip install torch==1.4.0+cpu torchvision==0.5.0+cpu
+        pip install torch==1.7.1+cpu torchvision==0.8.2+cpu
         -f https://download.pytorch.org/whl/torch_stable.html
     - name: Install PyTorch on MacOS
       if: matrix.operating-system == 'macos-latest'
-      run: pip install torch==1.4.0 torchvision==0.5.0
+      run: pip install torch==1.7.1 torchvision==0.8.2
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
