--- a/.github/workflows/package_testing.yml
+++ b/.github/workflows/package_testing.yml
@@ -1,15 +1,13 @@
-name: CI
+name: Package Testing
 
 on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+  schedule:
+    - cron: '0 0 * * *'  # Runs at 00:00 UTC every day
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
+  
     strategy:
       matrix:
         operating-system: [ubuntu-latest, windows-latest, macos-latest]
@@ -60,17 +58,9 @@ jobs:
     - name: Install PyTorch on MacOS
       if: matrix.operating-system == 'macos-latest'
       run: pip install torch==1.7.1 torchvision==0.8.2
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-    - name: Lint with flake8
-      run: |
-        pip install flake8
-        # stop the build if there are Python syntax errors or undefined names
-        flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
-        # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-        flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+    - name: Install latest craft-text-detector package
+      run: >
+        pip install --upgrade --force-reinstall craft-text-detector
     - name: Test with unittest
       run: |
         python -m unittest
